layout with images sans style

--- a/index.html
+++ b/index.html
@@ -1,13 +1,77 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Secret Agent Supply Inc.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
 
-    
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Secret Agent Supply Inc.</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="./resources/css/reset.css" type="text/css" />
+  <link rel="stylesheet" href="./resources/css/style.css" type="text/css" />
+
+</head>
+
+<body>
+  <header>
+    <div><img src="./resources/images/logo.png" alt="logo" /> Secret Agent Supply Inc.</div>
+  </header>
+
+  <div>
+    banner image
+    <img src="./resources/images/moto.jpeg" alt="logo" />
+    <div>
+      <h4>New Arrival</h4>
+      <h1>Sport Bikes and Morcycles</h1>
+    </div>
+  </div>
+
+  <div>
+    <nav>
+      <ul>
+        <li>Eyewear</li>
+        <li>Apparel</li>
+        <li>Gadgets</li>
+        <li>Vehicles</li>
+        <li>Classes</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+  </div>
+
+  <div>product list
+    <div>
+      <div><img src="./resources/images/pen.png" alt="Exploding Pen" /></div>
+      <span>Exploding Pen</span>
+    </div>
+
+    <div>
+      <div><img src="./resources/images/watch.png" alt="Cellular Watch" /></div>
+      <span>Cellular Watch</span>
+    </div>
+
+    <div>
+      <div><img src="./resources/images/glasses.png" alt="Thermal Glasses" /></div>
+      <span>Thermal Glasses</span>
+    </div>
+   </div>
+
+  <div>
+    info list
+    <div>
+      <span>Location</span>
+      <span>-47.346436, 84.32354</span>
+    </div>
+    <div>
+      <span>Hours</span>
+      <span>0800 - 1800</span>
+    </div>
+  </div>
+
+  <footer>
+    <div>Copyright Secret Agent Supply Inc.</div>
+  </footer>
+
+</body>
+
 </html>
