--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
 <body>
   <header>
-    <div><img src="./resources/images/logo.png" alt="logo" /> Secret Agent Supply Inc.</div>
+    <div class="site-container">
+      <img src="./resources/images/logo.png" alt="logo"  id="logo" /> 
+      <span class="text-ucase" id="companyName">Secret Agent Supply Inc.</span>
+    </div>
   </header>
 
   <div>
@@ -69,7 +72,11 @@
   </div>
 
   <footer>
-    <div>Copyright Secret Agent Supply Inc.</div>
+    <div class="site-container">
+     
+      <span>Copyright Secret Agent Supply Inc.</span>
+
+      </div>
   </footer>
 
 </body>
