banner, feature, and navigation

--- a/index.html
+++ b/index.html
@@ -20,25 +20,30 @@
     </div>
   </header>
 
-  <div>
-    banner image
-    <img src="./resources/images/moto.jpeg" alt="logo" />
-    <div>
-      <h4>New Arrival</h4>
-      <h1>Sport Bikes and Morcycles</h1>
+  <div id="banner">
+    <div class="site-container">
+      <div id="feature">
+        <h4 class="text-ucase">New Arrival</h4>
+        <h1 class="text-ucase">Sport Bikes and Morcycles</h1>
+      </div>
     </div>
   </div>
 
-  <div>
+  <div id="navigation">
     <nav>
-      <ul>
-        <li>Eyewear</li>
-        <li>Apparel</li>
-        <li>Gadgets</li>
-        <li>Vehicles</li>
-        <li>Classes</li>
-        <li>Contact</li>
+      <ul id="navItems" class="site-container">
+        <li><a href="#">Eyewear</a></li>
+        <li><a href="#">Apparel</a></li>
+        <li><a href="#">Gadgets</a></li>
+        <li><a href="#">Vehicles</a></li>
+        <li><a href="#">Classes</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
+
+      <ul id="navMenu">
+        <li><a href="#">Menu</a></li>
+      </ul>
+
     </nav>
   </div>
 
@@ -73,10 +78,8 @@
 
   <footer>
     <div class="site-container">
-     
       <span>Copyright Secret Agent Supply Inc.</span>
-
-      </div>
+    </div>
   </footer>
 
 </body>
