product list and company info (desktop design complete)

--- a/index.html
+++ b/index.html
@@ -47,32 +47,36 @@
     </nav>
   </div>
 
-  <div>product list
-    <div>
-      <div><img src="./resources/images/pen.png" alt="Exploding Pen" /></div>
-      <span>Exploding Pen</span>
+  <div class="site-container">
+    <div id="productList">
+      <div class="product">
+        <div class="product-image-container"><img src="./resources/images/pen.png" alt="Exploding Pen" /></div>
+        <span>Exploding Pen</span>
+      </div>
+  
+      <div class="product">
+        <div class="product-image-container"><img src="./resources/images/watch.png" alt="Cellular Watch" /></div>
+        <span>Cellular Watch</span>
+      </div>
+  
+      <div class="product">
+        <div class="product-image-container"><img src="./resources/images/glasses.png" alt="Thermal Glasses" /></div>
+        <span>Thermal Glasses</span>
+      </div>
     </div>
+  </div>
 
-    <div>
-      <div><img src="./resources/images/watch.png" alt="Cellular Watch" /></div>
-      <span>Cellular Watch</span>
-    </div>
+  <div class="site-container">
+    <div id="companyInfo" >
+      <div class="info-item">
+        <span class="info-title">Location</span>
+        <span class="info-detail">-47.346436, 84.32354</span>
+      </div>
 
-    <div>
-      <div><img src="./resources/images/glasses.png" alt="Thermal Glasses" /></div>
-      <span>Thermal Glasses</span>
-    </div>
-   </div>
-
-  <div>
-    info list
-    <div>
-      <span>Location</span>
-      <span>-47.346436, 84.32354</span>
-    </div>
-    <div>
-      <span>Hours</span>
-      <span>0800 - 1800</span>
+      <div class="info-item">
+        <span class="info-title">Hours</span>
+        <span class="info-detail">0800 - 1800</span>
+      </div>
     </div>
   </div>
 
