updated css ids and abided by declaration order

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <div id="navigation">
     <nav>
-      <ul id="navItems" class="site-container">
+      <ul id="nav-items" class="site-container">
         <li><a href="#">Eyewear</a></li>
         <li><a href="#">Apparel</a></li>
         <li><a href="#">Gadgets</a></li>
@@ -40,7 +40,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
 
-      <ul id="navMenu">
+      <ul id="nav-menu">
         <li><a href="#">Menu</a></li>
       </ul>
 
@@ -48,7 +48,7 @@
   </div>
 
   <div class="site-container">
-    <div id="productList">
+    <div id="product-list">
       <div class="product">
         <div class="product-image-container"><img src="./resources/images/pen.png" alt="Exploding Pen" /></div>
         <span>Exploding Pen</span>
@@ -67,7 +67,7 @@
   </div>
 
   <div class="site-container">
-    <div id="companyInfo" >
+    <div id="company-info" >
       <div class="info-item">
         <span class="info-title">Location</span>
         <span class="info-detail">-47.346436, 84.32354</span>
