added media queries for tablet and mobile and removed mockup borders: complete

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Secret Agent Supply Inc.</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
 
   <link rel="stylesheet" href="./resources/css/reset.css" type="text/css" />
   <link rel="stylesheet" href="./resources/css/style.css" type="text/css" />
@@ -31,6 +32,7 @@
 
   <div id="navigation">
     <nav>
+      
       <ul id="nav-items" class="site-container">
         <li><a href="#">Eyewear</a></li>
         <li><a href="#">Apparel</a></li>
@@ -49,17 +51,17 @@
 
   <div class="site-container">
     <div id="product-list">
-      <div class="product">
+      <div class="product" id="prd-exploding-pen">
         <div class="product-image-container"><img src="./resources/images/pen.png" alt="Exploding Pen" /></div>
         <span>Exploding Pen</span>
       </div>
   
-      <div class="product">
+      <div class="product" id="prd-cellular-watch">
         <div class="product-image-container"><img src="./resources/images/watch.png" alt="Cellular Watch" /></div>
         <span>Cellular Watch</span>
       </div>
   
-      <div class="product">
+      <div class="product" id="prd-thermal-glasses">
         <div class="product-image-container"><img src="./resources/images/glasses.png" alt="Thermal Glasses" /></div>
         <span>Thermal Glasses</span>
       </div>
